[tool.poetry]
name = "bsrgan"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
torchvision = "^0.13.1"
opencv-python = "^4.6.0"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
