[tool.poetry]
name = "bsrgan"
description = ""
version = "0.1.0"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
torchvision = "^0.13.1"
opencv-python = "^4.6.0"
matplotlib = "^3.5.3"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
